--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <!--/*@thymesVar id="owner" type="org.barberini.sfgpetclinic.model.Owner"*/-->
-    <h1 th:text="'List of Owners'">List of Owners...</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="owner : ${owners}">
-                <td th:text="${owner?.id}">0</td>
-                <td th:text="${owner?.firstName}">John</td>
-                <td th:text="${owner?.lastName}">Doe</td>
-            </tr>
-        </tbody>
-    </table>
+<h2 th:text="'List of Owners'">Owners</h2>
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th style="width: 150px;">Id</th>
+        <th style="width: 150px;">First Name</th>
+        <th style="width: 200px;">Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner.id}"/>
+        <td th:text="${owner.firstName}"/>
+        <td th:text="${owner.lastName}"/>
+    </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
